--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 *.jar
 *.war
 *.ear
+/target
+.classpath
+.project
+.settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.m2e.core.prefs
