--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+		<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>4.0-beta</version>
+		</dependency> 
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.0-beta8</version>
@@ -36,6 +41,12 @@
 			<artifactId>elasticsearch</artifactId>
 			<version>0.90.5</version>
 			<type>jar</type>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>15.0</version>
 		</dependency>
 	</dependencies>
 
